--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Lat1_AKB2_10116073_MuhammadRizqiZeinAzis</string>
+    <string name="button">Button</string>
+    <string name="mengontrol_hp_anak">Mengontrol HP Anak</string>
+    <string name="monitory_membantu_anda">Monitory Membantu Anda</string>
 </resources>
