Fixed placement for OPPO F1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="button">Button</string>
     <string name="mengontrol_hp_anak">Mengontrol HP Anak</string>
     <string name="monitory_membantu_anda">Monitory Membantu Anda</string>
+    <string name="mulai">Mulai</string>
 </resources>
